# Raytracer

./: .gitignore  README.md
RaytracingCore/: CMakeLists.txt  main.cpp
RaytracingCore/include/: camera.h  color.h  file.h  material.h  matrix.h  numbers.h  object.h  ray.h  raycast.h  screen.h  texture.h  vector.h  viewport.h
RaytracingCore/include/BVH/: BVH.h  BoundingBox.h
RaytracingCore/include/factory/: FactoryBase.h  IFactory.h  LightFactory.h  MeshFactory.h  ModelFactory.h  ObjectFactory.h  ShapeFactory.h
RaytracingCore/include/lights/: DirectionalLight.h  PointLight.h  light.h
RaytracingCore/include/meshs/: cone.h  cylinder.h  ellipsoid.h  geometry.h  mesh.h  sphere.h
RaytracingCore/include/models/: cone.h  cylinder.h  ellipsoid.h  geometry.h  mesh.h  model.h  sphere.h
RaytracingCore/include/shapes/: cone.h  cylinder.h  ellipsoid.h  shape.h  sphere.h
RaytracingCore/src/: camera.cpp  color.cpp  file.cpp  material.cpp  object.cpp  raycast.cpp  screen.cpp  texture.cpp  vector.cpp  viewport.cpp
RaytracingCore/src/BVH/: BVH.cpp  BoundingBox.cpp
RaytracingCore/src/factory/: LightFactory.cpp  MeshFactory.cpp  ModelFactory.cpp  ObjectFactory.cpp  ShapeFactory.cpp
RaytracingCore/src/lights/: DirectionalLight.cpp  PointLight.cpp  light.cpp
RaytracingCore/src/meshs/: cone.cpp  cylinder.cpp  ellipsoid.cpp  geometry.cpp  mesh.cpp  sphere.cpp
RaytracingCore/src/models/: cone.cpp  cylinder.cpp  ellipsoid.cpp  geometry.cpp  mesh.cpp  model.cpp  sphere.cpp
RaytracingCore/src/shapes/: cone.cpp  cylinder.cpp  ellipsoid.cpp  shape.cpp  sphere.cpp
Raytracing_Renderer/: CMakeLists.txt  example1.ppm  example1.txt  example2.txt  example4.ppm  example4.txt  example5.ppm  example6.ppm  main.cpp
Raytracing_Renderer/include/: camera.h  color.h  file.h  raycast.h  screen.h  vector.h
Raytracing_Renderer/include/factory/: FactoryBase.h  IFactory.h  LightFactory.h  ObjectFactory.h  ShapeFactory.h
Raytracing_Renderer/include/lights/: DirectionalLight.h  PointLight.h  light.h
Raytracing_Renderer/include/objects/: cone.h  cylinder.h  ellipsoid.h  object.h  sphere.h
Raytracing_Renderer/include/shapes/: cylinder.h  shape.h  sphere.h
Raytracing_Renderer/src/: ObjectFactory.cpp  camera.cpp  color.cpp  cone.cpp  cylinder.cpp  ellipsoid.cpp  file.cpp  material.cpp  object.cpp  raycast.cpp  screen.cpp  sphere.cpp  vector.cpp
Raytracing_Renderer/src/factory/: LightFactory.cpp  ObjectFactory.cpp
Raytracing_Renderer/src/lights/: DirectionalLight.cpp  PointLight.cpp  light.cpp
Raytracing_Renderer/src/shapes/: cone.cpp  cylinder.cpp  shape.cpp
